show secure toggle for collection of file/long/rich text

--- a/src/app/utils/structure-field-properties/structure-field-properties.component.html
+++ b/src/app/utils/structure-field-properties/structure-field-properties.component.html
@@ -120,7 +120,7 @@
         <odp-date-property *ngIf="formItem.get('type').value=='Date'" [form]="formItem" [edit]="edit"
           [isLibrary]="isLibrary" [isDataFormat]="isDataFormat">
         </odp-date-property>
-        <div class="d-flex mb-4" *ngIf="formItem.get('type').value=='Boolean' && !isDataFormat && !isLibrary ">
+        <div class="d-flex" *ngIf="formItem.get('type').value=='Boolean' && !isDataFormat && !isLibrary ">
           <div class="label-width text-secondary">Default Value
           </div>
           <div class="value-width position-relative">
@@ -193,7 +193,7 @@
               <span>Label should not be more than 40 characters</span>
             </span>
           </div>
-          <div *ngIf="!idField" class="d-flex w-100 my-4">
+          <div *ngIf="!idField" class="d-flex w-100 mt-4">
             <div class="label-width text-secondary">Custom Error</div>
             <div class="value-width">
               <input *ngIf="canEdit" class="form-control" type="text" formControlName="errorMessage" id="errorMessage"
@@ -201,7 +201,7 @@
               <span *ngIf="!canEdit">{{formItem.get('properties.errorMessage').value}}</span>
             </div>
           </div>
-          <div *ngIf="showSecureText(formItem)" class="d-flex w-100 mb-4">
+          <div *ngIf="showSecureText(formItem)" class="d-flex w-100 mt-4">
             <div class="label-width text-secondary">Secure</div>
             <!-- <div class="value-width">
               <select [attr.disabled]="!canEdit ? '' : null" class="form-control" formControlName="password">
@@ -238,8 +238,44 @@
           </div>
         </ng-container>
 
+        <div *ngIf="showSecureFile(formItem)" class="d-flex w-100 mt-4">
+          <div class="label-width text-secondary">Secure</div>
+          <!-- <div class="value-width">
+            <select [attr.disabled]="!canEdit ? '' : null" class="form-control" formControlName="password">
+              <option [ngValue]="true">True</option>
+              <option [ngValue]="false">False</option>
+            </select> -->
+          <div class="value-width position-relative">
+            <ng-container *ngIf="canEdit">
+              <label *ngIf="canEdit" class="switch accent">
+                <input type="checkbox" formControlName="password">
+                <span class="slider"></span>
+                <span class="toggler"></span>
+                <span class="ml-3">{{formItem.get('properties.password')?.value ? 'Yes' : 'No'}}</span>
+              </label>
+            </ng-container>
+            <ng-container *ngIf="!canEdit">
+              <span class="text d-flex" *ngIf=" formItem.get('properties.password').value === true">
+                <span
+                  class="d-flex align-items-center justify-content-center rounded-circle bg-accent check-circle mr-1">
+                  <span class="fa fa-check text-white"></span>
+                </span>
+                <span class="text">Yes</span>
+              </span>
+              <span class="text d-flex" *ngIf="formItem.get('properties.password').value === false">
+                <span
+                  class="d-flex align-items-center justify-content-center rounded-circle bg-secondary check-circle mr-1">
+                </span>
+                <span class="text">No</span>
+              </span>
+            </ng-container>
+          </div>
+
+          <!-- </div> -->
+        </div>
+
         <ng-container *ngIf="showCommonFields">
-          <div class="d-flex w-100" [ngClass]="{'mb-4': isLastFormItem && !descriptionError}"
+          <div class="d-flex w-100 mt-4" [ngClass]="{'mb-4': isLastFormItem && !descriptionError}"
             *ngIf="formList.length == 1 || formIndex > 0">
             <div class="label-width text-secondary">Description</div>
             <div class="value-width">
