--- a/src/app/utils/structure-field-properties/text-property/text-property.component.html
+++ b/src/app/utils/structure-field-properties/text-property/text-property.component.html
@@ -29,41 +29,7 @@
         </ng-container>
       </div>
     </div>
-    <div *ngIf=" showSecureText(form)" class="d-flex w-100 mb-2 mt-4">
-      <div class="label-width text-secondary">Secure</div>
-      <!-- <div class="value-width">
-        <select [attr.disabled]="!canEdit ? '' : null" class="form-control" formControlName="password">
-          <option [ngValue]="true">True</option>
-          <option [ngValue]="false">False</option>
-        </select> -->
-        <div class="value-width position-relative">
-          <ng-container *ngIf="canEdit">
-            <label *ngIf="canEdit" class="switch accent">
-              <input type="checkbox" formControlName="password">
-              <span class="slider"></span>
-              <span class="toggler"></span>
-              <span class="ml-3">{{form.get('properties.password')?.value ? 'Yes' : 'No'}}</span>
-            </label>
-          </ng-container>
-          <ng-container *ngIf="!canEdit">
-            <span class="text d-flex" *ngIf=" form.get('properties.password').value === true">
-              <span
-                class="d-flex align-items-center justify-content-center rounded-circle bg-accent check-circle mr-1">
-                <span class="fa fa-check text-white"></span>
-              </span>
-              <span class="text">Yes</span>
-            </span>
-            <span class="text d-flex" *ngIf="form.get('properties.password').value === false">
-              <span
-                class="d-flex align-items-center justify-content-center rounded-circle bg-secondary check-circle mr-1">
-              </span>
-              <span class="text">No</span>
-            </span>
-          </ng-container>
-        </div>
-       
-      <!-- </div> -->
-    </div>
+
     <div class="d-flex">
       <div class="label-width"></div>
       <div class="value-width ml-2">
@@ -84,7 +50,40 @@
       </div>
     </div>
   </div>
-  <div class="d-flex flex-column w-100 my-2" *ngIf="form.get('properties.pattern') && (form.get('properties._detailedType').value ==='' ||
+  <div *ngIf=" showSecureText()" class="d-flex w-100 mt-4" [ngClass]="{'mb-4': collectionSecureText()}">
+    <div class="label-width text-secondary">Secure</div>
+    <!-- <div class="value-width">
+      <select [attr.disabled]="!canEdit ? '' : null" class="form-control" formControlName="password">
+        <option [ngValue]="true">True</option>
+        <option [ngValue]="false">False</option>
+      </select> -->
+    <div class="value-width position-relative">
+      <ng-container *ngIf="canEdit">
+        <label *ngIf="canEdit" class="switch accent">
+          <input type="checkbox" formControlName="password">
+          <span class="slider"></span>
+          <span class="toggler"></span>
+          <span class="ml-3">{{form.get('properties.password')?.value ? 'Yes' : 'No'}}</span>
+        </label>
+      </ng-container>
+      <ng-container *ngIf="!canEdit">
+        <span class="text d-flex" *ngIf=" form.get('properties.password').value === true">
+          <span class="d-flex align-items-center justify-content-center rounded-circle bg-accent check-circle mr-1">
+            <span class="fa fa-check text-white"></span>
+          </span>
+          <span class="text">Yes</span>
+        </span>
+        <span class="text d-flex" *ngIf="form.get('properties.password').value === false">
+          <span class="d-flex align-items-center justify-content-center rounded-circle bg-secondary check-circle mr-1">
+          </span>
+          <span class="text">No</span>
+        </span>
+      </ng-container>
+    </div>
+
+    <!-- </div> -->
+  </div>
+  <div class="d-flex flex-column w-100 mt-4" *ngIf="form.get('properties.pattern') && (form.get('properties._detailedType').value ==='' ||
           form.get('properties._detailedType').value === 'password')">
     <div class="d-flex position-relative ">
       <div class="label-width text-secondary">Pattern</div>
@@ -197,7 +196,7 @@
     </button>
   </div>
   <ng-container *ngIf="formatType!='FLATFILE'">
-    <div class="d-flex flex-column w-100 mb-4"
+    <div class="d-flex flex-column w-100 mb-4 mt-4"
       *ngIf="form.get('properties.minlength') && form.get('properties._detailedType').value==''">
       <div class="d-flex flex-row mb-4">
         <div class="label-width text-secondary">Length</div>
