--- a/src/app/home/schema-utils/manage-permissions/manage-permissions.component.html
+++ b/src/app/home/schema-utils/manage-permissions/manage-permissions.component.html
@@ -91,10 +91,10 @@
                             (click)="activeTab=1">
                             Permission
                         </div>
-                        <div class="tab px-3" [ngClass]="{'text-accent border-accent':activeTab === 2}"
+                        <!-- <div class="tab px-3" [ngClass]="{'text-accent border-accent':activeTab === 2}"
                             (click)="activeTab=2" *ngIf="!schemaFree">
                             Condition
-                        </div>
+                        </div> -->
                     </div>
                     <div class="tab-container d-flex align-items-start border-bottom w-100">
                         <div id="tab-1" *ngIf="activeTab === 1">
