bot properties Date Attribute is showing as Text attribute

--- a/src/app/home/local-bot/local-bot.component.html
+++ b/src/app/home/local-bot/local-bot.component.html
@@ -378,7 +378,7 @@
                             </button>
                             <div ngbDropdownMenu>
                                 <div class="dropdown-itm px-2 py-1" *ngFor="let type of types" (click)="setUserAttributeType(type,i);listDropdown.close();">
-                                    <odp-field-type [label]="true" [field]="{type:type.value,properties:{}}">
+                                    <odp-field-type [label]="true" [field]="{type:type.value,properties:{}}" [basic]="true">
                                     </odp-field-type>
                                 </div>
                             </div>
