--- a/src/app/home/local-bot/local-bot.component.html
+++ b/src/app/home/local-bot/local-bot.component.html
@@ -373,7 +373,7 @@
                         </div>
                         <div ngbDropdown #listDropdown="ngbDropdown" class="w-100" container="body">
                             <button class="btn bg-white border rounded w-100 d-flex justify-content-between align-items-center" ngbDropdownToggle>
-                                <odp-field-type [label]="true" [field]="{type:control.get('type').value,properties:{}}">
+                                <odp-field-type [label]="true" [field]="{type:control.get('type').value,properties:{}}" [basic]="true">
                                 </odp-field-type>
                             </button>
                             <div ngbDropdownMenu>
