--- a/src/app/home/local-bot/manage-bot-property/manage-bot-property.component.html
+++ b/src/app/home/local-bot/manage-bot-property/manage-bot-property.component.html
@@ -40,7 +40,7 @@
                 <label for="type">Type</label>
                 <div id="type" ngbDropdown #listDropdown="ngbDropdown" class="w-100" container="body">
                     <button class="btn bg-white border rounded w-100 d-flex justify-content-between align-items-center" ngbDropdownToggle>
-                        <odp-field-type [label]="true" [field]="{type:editAttributeForm.get('type').value,properties:{}}">
+                        <odp-field-type [label]="true" [field]="{type:editAttributeForm.get('type').value,properties:{}}" [basic]="true">
                         </odp-field-type>
                     </button>
                     <div ngbDropdownMenu>
