--- a/src/app/apps/apps.component.scss
+++ b/src/app/apps/apps.component.scss
@@ -44,10 +44,11 @@
       overflow: hidden;
       transition: 0.25s;
       img {
-        min-width: 36px;
-        max-width: 36px;
-        min-height: 36px;
-        max-height: 36px;
+        min-width: 20px;
+        max-width: 20px;
+        min-height: 20px;
+        max-height: 20px;
+        border-radius: 50%;
       }
     }
   }
